src/test/deca/syntax/invalid/arithmetic-multiplyEqual.synt
arithmetic-multiplyEqual.deca:12:

